Added a comment system.  Only supports loading and saving at the moment, without the graphical view.